--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "electron-builder": "^25.1.8"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "pdf2json": "^3.1.5",
     "xlsx": "^0.18.5"
   }
